--- a/styles/sampleDelStyle.scss
+++ b/styles/sampleDelStyle.scss
@@ -18,6 +18,7 @@
     height: 100%;
     justify-content: center;
     align-content: center;
+    background-color: white;
     grid-template-columns: max-content max-content;
   }
   
